Add spents list

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
       
       <!-- Main Content -->
       <main class="flex-1 flex flex-col {{mainClass}}">
-        <div id="main-content">
+        <div id="main-content" class="w-full">
           {{content}}
         </div>
       </main>
