--- a/components/header.html
+++ b/components/header.html
@@ -11,7 +11,7 @@
     </button>
   </div>
 
-  <!-- Fecha solo en home -->
+  <!-- Fecha en home y month -->
   <div id="home-date" class="mt-4 hidden">
     <div class="flex items-center justify-center gap-3">
       <!-- Botones navegación izquierda -->
