--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/assets/style.css" />
+    <link rel="stylesheet" crossorigin href="/index.css">
   </head>
   <body class="h-full bg-gradient-to-b from-slate-50 to-slate-100 dark:from-slate-900 dark:to-slate-950 text-slate-800 dark:text-slate-100">
     <div class="min-h-screen max-w-sm mx-auto flex flex-col p-4 pb-[calc(env(safe-area-inset-bottom)+1rem)]">
